# ASMR1

./: .gitignore  .gitingore  readme.txt
ASMR1/reference_ws/: README.md
ASMR1/reference_ws/src/my_robot_control/: package.xml
ASMR1/reference_ws/src/my_robot_control/my_robot_control/: movement.py
ASMR1/reference_ws/src/my_robot_perception/: package.xml
ASMR1/reference_ws/src/my_robot_perception/my_robot_perception/: goal_checker_node.py
ASMR1/reference_ws/src/my_robot_perception/test/: test_scan_to_pointcloud.py
lol/: hello.txt
look/: folder.icns
reference_ws/src/my_robot_bringup/config/: my_robot.rviz
reference_ws/src/my_robot_bringup/worlds/: obstacle_world.sdf
reference_ws/src/my_robot_control/my_robot_control/: move_square.py  velocity_controller_node.py
reference_ws/src/my_robot_control/test/: test_velocity_state.py
reference_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
reference_ws/src/my_robot_perception/my_robot_perception/: odom_utils.py
reference_ws/src/my_robot_perception/test/: test_odom_utils.py  test_scan_utils.py
ws/src/asmr_arm_bringup/: CMakeLists.txt  Untitled.ipynb  package.xml
ws/src/asmr_arm_bringup/config/: asmr_arm.rviz  bridge.yaml  debug.yaml
ws/src/asmr_arm_bringup/launch/: asmr_arm_sim.launch.py  push_block_world.launch.py
ws/src/asmr_arm_control/: package.xml  setup.cfg  setup.py
ws/src/asmr_arm_control/asmr_arm_control/: debug.py  kinematics_server.py  trajectory_server.py
ws/src/asmr_arm_description/: CMakeLists.txt  package.xml
ws/src/asmr_arm_description/config/: arm_dimensions_pedestal.yaml  controllers_pedestal.yaml
ws/src/asmr_arm_description/urdf/: arm.ros2_control.xacro  arm.urdf.xacro  arm_pedestal.urdf.xacro
ws/src/asmr_arm_description/worlds/: push_block_world.sdf
ws/src/asmr_arm_interfaces/: CMakeLists.txt  package.xml
ws/src/asmr_arm_interfaces/action/: ExecuteTrajectory.action
ws/src/asmr_arm_interfaces/srv/: BSService.srv  ComputeFK.srv  ComputeIK.srv
ws/src/asmr_arm_mission/: package.xml  setup.cfg  setup.py
ws/src/asmr_arm_mission/asmr_arm_mission/: push_block_mission.py
ws/src/my_robot_bringup/: CMakeLists.txt  package.xml
ws/src/my_robot_bringup/config/: bridge.yaml  my_robot.rviz
ws/src/my_robot_bringup/config/.ipynb_checkpoints/: my_robot-checkpoint.rviz
ws/src/my_robot_bringup/launch/: corridor_world.launch.py  empty_world.launch.py  robot_sim.launch.py  robot_vis.launch.py
ws/src/my_robot_bringup/launch/.ipynb_checkpoints/: robot_sim.launch-checkpoint.py
ws/src/my_robot_bringup/worlds/: empty_world.sdf  my_world.sdf  wall_world.sdf
ws/src/my_robot_control/: package.xml  setup.py
ws/src/my_robot_control/.ipynb_checkpoints/: package-checkpoint.xml
ws/src/my_robot_control/my_robot_control/: velocity_ramp.py  velocity_smoother_node.py
ws/src/my_robot_control/test/: test_velocity_ramp.py
ws/src/my_robot_description/: CMakeLists.txt  package.xml
ws/src/my_robot_description/config/: arm_dimensions.yaml
ws/src/my_robot_description/urdf/: my_robot.urdf.xacro  my_robot_arm.urdf.xacro  out.urdf  robot.gazebo
ws/src/my_robot_description/urdf/.ipynb_checkpoints/: my_robot.urdf-checkpoint.xacro  robot-checkpoint.gazebo
ws/src/my_robot_description/worlds/: corridor_world.sdf
ws/src/my_robot_interfaces/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  package-checkpoint.xml
ws/src/my_robot_interfaces/action/: SetVelocity.action
ws/src/my_robot_mission/: package.xml  setup.cfg  setup.py
ws/src/my_robot_mission/launch/: corridor_mission.launch.py
ws/src/my_robot_mission/my_robot_mission/: corridor_mission.py
ws/src/my_robot_nav/: package.xml  setup.py
ws/src/my_robot_nav/my_robot_nav/: debug_map.py  grid_cells_publisher.py  helper.py  map_test.py  maze_solver.py  meta_controller.py  obstacle_nav.py  point_navigator.py  test.py  variables.py
ws/src/my_robot_nav/my_robot_nav/.ipynb_checkpoints/: map_test-checkpoint.py  meta_controller-checkpoint.py  obstacle_nav-checkpoint.py  point_navigator-checkpoint.py
ws/src/my_robot_perception/: package.xml  setup.py
ws/src/my_robot_perception/my_robot_perception/: scan_fusion_node.py  scan_to_pointcloud_node.py  scan_utils.py
ws/src/my_robot_perception/test/: test_goal_checker.py  test_scan_utils.py
