<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asmr_arm_description</name>
  <version>0.1.0</version>
  <description>Two-link planar arm URDF, launch, and Gazebo world for ASMR MiniLab 2.</description>
  <maintainer email="j.bajorath@uni-muenster.de">Janosch Bajorath</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>pid_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
