<?xml version="1.0"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configurations for my_robot</description>
  <maintainer email="j.bajorath@uni-muenster.de">Janosch Bajorath</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO (students): declare the exec_depend packages your launch needs -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
