<?xml version="1.0"?>
<package format="3">
  <name>my_robot_control</name>
  <version>0.1.0</version>
  <description>Control nodes for my_robot</description>
  <maintainer email="j.bajorath@uni-muenster.de">Janosch Bajorath</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
