<?xml version="1.0"?>
<package format="3">
  <name>my_robot_description</name>
  <version>0.0.1</version>
  <description>URDF model for my_robot differential-drive robot</description>
  <maintainer email="j.bajorath@uni-muenster.de">Janosch Bajorath</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
