<?xml version="1.0"?>
<package format="3">
  <name>my_robot_mission</name>
  <version>0.0.0</version>
  <description>Robot mission package</description>

  <maintainer email="you@todo.todo">your_name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>