<?xml version="1.0"?>
<package format="3">
  <name>my_robot_perception</name>
  <version>0.0.1</version>
  <description>Sensor utility functions for my_robot</description>
  <maintainer email="..">..</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
